@@ -98,6 +98,7 @@ struct _MetaDisplay
   Atom atom_net_wm_icon_geometry;
   Atom atom_utf8_string;
   Atom atom_wm_icon_size;
+  Atom atom_kwm_win_icon;
   
   /* This is the actual window from focus events,
    * not the one we last set
