@@ -1,3 +1,11 @@
+2001-08-22  Havoc Pennington  <hp@pobox.com>
+
+	* src/window.c (update_icon): half-ass implementation of 
+	getting pixmap icons (WM_NORMAL_HINTS and KWM_WIN_ICON). 
+	Ignores mask for now, with possibly ugly results for 
+	some apps.
+	(read_rgb_icon): fixage
+
 2001-08-19  Havoc Pennington  <hp@pobox.com>
 
 	* src/window.c: add a "fullscreen" semantic type; if a window
